<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/engineerCalculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resultField2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/operationField2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/numberField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result2"
            android:inputType="phone" />

        <LinearLayout
            android:id="@+id/linearLayoutName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberField2"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/firstLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/D"
                    app:layout_constraintEnd_toStartOf="@+id/secondLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/secondLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/E"
                    app:layout_constraintEnd_toStartOf="@+id/thirdLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/firstLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/thirdLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/M"
                    app:layout_constraintEnd_toStartOf="@+id/fourLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/secondLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fourLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/E"
                    app:layout_constraintEnd_toStartOf="@+id/fiveLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/thirdLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fiveLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/N"
                    app:layout_constraintEnd_toStartOf="@+id/sixLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/fourLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sixLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/T"
                    app:layout_constraintEnd_toStartOf="@+id/sevenLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/fiveLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sevenLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/E"
                    app:layout_constraintEnd_toStartOf="@+id/eightLetter2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sixLetter2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eightLetter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/V"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sevenLetter2"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:id="@+id/memory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#cccccc">

                <Button
                    android:id="@+id/MC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mc" />

                <Button
                    android:id="@+id/MR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mr" />

                <Button
                    android:id="@+id/MS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ms" />

                <Button
                    android:id="@+id/mPlus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m_plus" />
                <Button
                    android:id="@+id/mMinus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m_minus"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/firstRowLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc">

                <Button
                    android:id="@+id/clearBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/signBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign" />

                <Button
                    android:id="@+id/percentBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/percent" />

                <Button
                    android:id="@+id/divisionBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/div" />
                <Button
                    android:id="@+id/root"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u221a"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondRowLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc">

                <Button
                    android:id="@+id/sevenBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eightBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nineBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/multiplyBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/multiply" />
                <Button
                    android:id="@+id/xSquared"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_u00b2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdRowLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/secondRowLayout2"
                android:background="#cccccc">

                <Button
                    android:id="@+id/fourBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/fiveBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/sixBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/minusBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus" />
                <Button
                    android:id="@+id/Xy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_u005ey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourRowLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thirdRowLayout"
                android:background="#cccccc">

                <Button
                    android:id="@+id/oneBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/twoBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/threeBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/plusBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus" />
                <Button
                    android:id="@+id/factorial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fact" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fourRowLayout"
                android:background="#cccccc">

                <Button
                    android:id="@+id/zeroBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/zero" />
                <Button
                    android:id="@+id/doubleZeroBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_00" />

                <Button
                    android:id="@+id/pointBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/point" />

                <Button
                    android:id="@+id/equalBtn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/equal" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/switchBtn"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/switch_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>